test_files/negative/polymorph/polymorph.stats_strict
Not a PDF file
Lexing error at offset 59 [0x3b] : invalid escape sequence in name context !
